# billing

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_DEV.md  docker-compose-auth.yaml  docker-compose-billing.yaml  docker-compose-common.yaml  docker-compose-logging.yaml  docker-compose-nginx.yaml  docker-compose-notification.yaml  docker-compose-prod.yaml  docker-compose.yaml
notification_service/admin/: Dockerfile  Makefile  docker-entrypoint.sh  pyproject.toml  requirements.txt
notification_service/admin/bash/: start_admin.sh
notification_service/admin/cli/: __main__.py  config.py  template.py
notification_service/admin/config/: auth.py  base_error.py  settings.py  urls.py
notification_service/admin/jwt/: backend.py  containers.py  jwt_service.py
notification_service/admin/notifications/: apps.py  celery.py
notification_service/admin/uwsgi/: uwsgi.ini
src/: Dockerfile  docker-entrypoint.sh  entrypoint.sh  models_mixins.py  pyproject.toml  requirements.txt
src/bash/: start_app.sh  start_billing.sh  start_celery.sh  start_flower.sh
src/billing/: admin.py  apps.py  celery.py  config.py  containers.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/billing/api/: urls.py
src/billing/migrations/: 0001_initial.py  0002_alter_payments_external_payment_id_and_more.py  0003_refunds_user_subscription_id.py
src/billing/mock/: mock_payment_service.py  mock_token_service.py  redis_db.py
src/billing/schemas/: notification.py  payment.py  refund.py
src/billing/services/: abstracts.py  payment_service.py  token_service.py
src/config/: auth.py  celery.py  settings.py  urls.py
src/config/components/: application_definition.py  database.py  drf.py  exception_hander.py  logging.py  worker.py
src/jwt/: apps.py  decorators.py  errors.py  jwt_service.py  middlewares.py
src/misc/: pydantic_yaml.py  yaml_helper.py
src/notifications/: apps.py  config.py  containers.py  notificator.py  tasks.py  urls.py  views.py
src/payment_check/: apps.py  containers.py  tasks.py
src/payment_prolongation/: apps.py  constants.py  containers.py  misc.py  tasks.py  urls.py  views.py
src/subscriptions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/user/: models.py
src/users/: models.py
src/uwsgi/: uwsgi.ini
(+83 files in other folders)
